
17. Fix JIT tests when UTF is disabled and both 8 and 16 bit mode are enabled.

18. If the --only-matching (-o) option in pcregrep is specified multiple
    times, each one causes appropriate output. For example, -o1 -o2 outputs the 
    substrings matched by the 1st and 2nd capturing parentheses. A separating 
    string can be specified by --om-separator (default empty). 


Version 8.31 06-July-2012
-------------------------

1.  Fixing a wrong JIT test case and some compiler warnings.

2.  Removed a bashism from the RunTest script.

3.  Add a cast to pcre_exec.c to fix the warning "unary minus operator applied
    to unsigned type, result still unsigned" that was given by an MS compiler
    on encountering the code "-sizeof(xxx)".

4.  Partial matching support is added to the JIT compiler.

5.  Fixed several bugs concerned with partial matching of items that consist
    of more than one character:

    (a) /^(..)\1/ did not partially match "aba" because checking references was
        done on an "all or nothing" basis. This also applied to repeated
        references.

    (b) \R did not give a hard partial match if \r was found at the end of the
        subject.

    (c) \X did not give a hard partial match after matching one or more
        characters at the end of the subject.

    (d) When newline was set to CRLF, a pattern such as /a$/ did not recognize
        a partial match for the string "\r".

    (e) When newline was set to CRLF, the metacharacter "." did not recognize
        a partial match for a CR character at the end of the subject string.

6.  If JIT is requested using /S++ or -s++ (instead of just /S+ or -s+) when
    running pcretest, the text "(JIT)" added to the output whenever JIT is
    actually used to run the match.

7.  Individual JIT compile options can be set in pcretest by following -s+[+]
    or /S+[+] with a digit between 1 and 7.

8.  OP_NOT now supports any UTF character not just single-byte ones.
